--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,24 @@
-.DS_Store
+.idea
+# Compiled class file
 *.class
-.project
-.classpath
-.settings
-.settings/
-
+ 
+# Log file
+*.log
+ 
+# BlueJ files
+*.ctxt
+ 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
+ 
 # Package Files #
 *.jar
 *.war
+*.nar
 *.ear
-
+*.zip
+*.tar.gz
+*.rar
+ 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/bin/
-.idea
-.gradle
-# For MacOS:
-.DS_Store
-
-# For vim:
-*.swp
-
-# For build
-build/
-target
-target/
-
-# For intellij
-*.iml
