--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+.idea/*
 # Compiled class file
 *.class
  
@@ -23,7 +24,7 @@
 # For build
 build/
 target
-target/
+target/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
