--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
+### IntelliJ IDEA ###
 .idea
-.idea/*.xml
+*.iws
+*.iml
+*.ipr
+*.log
+
 # Compiled class file
 *.class
- 
-# Log file
-*.log
- 
+  
 # BlueJ files
 *.ctxt
  
