--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -89,6 +89,10 @@ spring:
         multiplier: 5
 
 mybatis-plus:
+  #指明mapper.xml扫描位置(classpath* 代表编译后类文件根目录)
+  #mapper-locations: classpath*:mapper/**Mapper.xml
+  #指明实体扫描(多个package用逗号或者分号分隔)
+  #typeAliasesPackage: javademo.tyh.model.base;javademo.tyh.model.hotel;
   #config-location:  classpath:mybatis-config.xml
   check-config-location: false
   executor-type: reuse #ExecutorType.SIMPLE：该执行器类型不做特殊的事情，为每个语句的执行创建一个新的预处理语句（PreparedStatement）
